tests/contract_testcases/polkadot/enums/incorrect_fields.sol
enum state { }
// ---- Expect: diagnostics ----
// error: 1:6-11: enum 'state' has no fields
